# Agent-Marketplace

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  PLAN.md  QUICKSTART.md  README.md  app.py  check_transactions.py  init.md  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  sample.md  start_servers.sh  tailwind.config.ts  test_buyer_conditional_routing.py  test_debug.py  test_direct_answer.py  test_embedded.py  test_with_circle.py
agent_marketplace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/: server.py
buyer_agent/: __init__.py  graph.py  state.py  utils.py
buyer_agent/nodes/: __init__.py  decompose_goal.py  discover.py  evaluate_need.py  fetch_result.py  format_direct_answer.py  pay.py  plan.py  send_research.py  synthesize_results.py  validate_scope.py
contracts/: AgentEscrow.vy  SpendingLimiter.vy  deploy.py
demo/: __init__.py  run_demo.py
orchestrator/: graph.py  prompts.py  state.py
orchestrator/nodes/: clarifier.py  dispatcher.py  planner.py  synthesizer.py
scripts/: seed.py  start.py
seller_agent/: __init__.py  graph.py  server.py  state.py
seller_agent/nodes/: __init__.py  formatter.py  (+3 more)
shared/: __init__.py  builtin_tools.py  circle_client.py  config.py  database.py  envfile.py  llm_client.py  llm_providers.py  provisioning.py  register_entity_secret.py  repository.py  seller_config.py  ssl.py  types.py  wallet_setup.py  x402_client.py
tests/: test_error_propagation.py
ui/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json
venv312/: pyvenv.cfg
(+20 files in other folders)
